fix #6, css update, remove font link from register
/*处理iframe内容因滚动条跳动的问题*/
::-webkit-scrollbar {
width: 0px;
height: 0px;
}

.page-detail iframe {
position: absolute;
border: none;
width: 100%;    height: 100%;
}

--- a/magento-server-kikuu/kikuuapp3/css/common.css
+++ b/magento-server-kikuu/kikuuapp3/css/common.css
@@ -37,7 +37,11 @@ a:active {
     background-color: #F4A137;
     border: 1px solid #F4A137;
 }
-
+/*处理iframe内容因滚动条跳动的问题*/
+::-webkit-scrollbar {
+	width: 0px;
+	height: 0px;
+	}
 /******************* start **************************/
 .start, .slider {
     position: fixed;
@@ -464,9 +468,9 @@ a:active {
 }
 
 .page-detail iframe {
+	position: absolute;
     border: none;
-    width: 100%;
-    height: 100%;
+    width: 100%;    height: 100%;
 }
 .page-detail .detailInfo {
 	margin-top: 50px;
